@@ -13,14 +13,10 @@
 	<name>Reasoner Elk Snomed</name>
 
 	<properties>
-		<failsafeArgLine>--enable-preview -Xmx12G</failsafeArgLine>
+		<failsafeArgLine>-Xmx12G</failsafeArgLine>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>coordinate</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>data-spinedarray-provider</artifactId>
@@ -59,6 +55,10 @@
 		<dependency>
 			<groupId>dev.ikm.elk</groupId>
 			<artifactId>elk-snomed-test</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>dev.ikm.hybrid-reasoner</groupId>
+			<artifactId>hybrid-reasoner-snomed</artifactId>
 		</dependency>
 	</dependencies>
 </project>
